<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pokemon_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PokemonFragment">


    <TextView
        android:id="@+id/pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_16"
        android:textSize="@dimen/name_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/default_pokemon_name" />

    <ImageView
        android:id="@+id/pokemon_sprite_foreground"
        android:layout_width="@dimen/sprite_image_size"
        android:layout_height="@dimen/sprite_image_size"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_16"
        android:contentDescription="@string/pokemon_image_front"
        android:src="@drawable/image_placeholder"
        app:layout_constraintEnd_toStartOf="@+id/pokemon_sprite_background"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_name" />

    <ImageView
        android:id="@+id/pokemon_sprite_background"
        android:layout_width="@dimen/sprite_image_size"
        android:layout_height="@dimen/sprite_image_size"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:contentDescription="@string/pokemon_image_back"
        android:src="@drawable/image_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/pokemon_sprite_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pokemon_sprite_foreground" />

    <Button
        android:id="@+id/pokemon_moves_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/moves"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_sprite_background" />

    <Button
        android:id="@+id/pokemon_stats_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_moves_button" />

    <Button
        android:id="@+id/pokemon_refresh_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_32"
        android:text="@string/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_stats_button"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loading_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_gravity="center"
        android:alpha="0.6"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
